#1933: migrated from TextArea to ListView for performance and felxibility reasons.
Signed-off-by: laim2003 <luk.faber@gmx.de>